// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sass > compileString case > output css 1`] = `
"ul:nth-child(3n+1) {
  background-color: #004080;
}

ul:nth-child(3n+2) {
  background-color: #004d99;
}

ul:nth-child(3n+3) {
  background-color: #0059b3;
}"
`;

exports[`sass > compileString comments case > output css 1`] = `
"/* @hello.world*/
/* @hello.world="xxx"*/
ul:nth-child(3n+1) {
  background-color: #004080;
}

/* @hello.world*/
/* @hello.world="xxx"*/
ul:nth-child(3n+2) {
  background-color: #004d99;
}

/* @hello.world*/
/* @hello.world="xxx"*/
ul:nth-child(3n+3) {
  background-color: #0059b3;
}"
`;

exports[`sass > compileString mergeRoot case > output css 1`] = `
"ul:nth-child(3n+1) {
  background-color: #004080;
}

ul:nth-child(3n+2) {
  background-color: #004d99;
}

ul:nth-child(3n+3) {
  background-color: #0059b3;
}"
`;
